@startuml
!theme plain
'--------------------------------------------------
' Diagramme ERD - Kotlin Monsters (Sprint 3)
'--------------------------------------------------

entity "Entraineur" as Entraineur {
 * id : INT <<PK>>
 --
 nom : VARCHAR(255)
 argents : INT
}

entity "EspeceMonstre" as EspeceMonstre {
  * id : INT <<PK>>
  --
  nom : VARCHAR(255)
  type : VARCHAR(255)
  baseAttaque : INT
  baseDefense : INT
  baseVitesse : INT
  baseAttaqueSpe : INT
  baseDefenseSpe : INT
  basePv : INT
  modAttaque : DOUBLE
  modDefense : DOUBLE
  modVitesse : DOUBLE
  modAttaqueSpe : DOUBLE
  modDefenseSpe : DOUBLE
  modPv : DOUBLE
  description : TEXT
  particularites : TEXT
  caracteres : TEXT
}

entity "Zone" as Zone {
 * id : INT <<PK>>
 --
  nom : VARCHAR(255)
  expZone : INT
 --
  fk_zone_Suivante : INT <<FK>>
  fk_zone_Precedente : INT <<FK>>

}

entity "Zone_EspeceMonstre" as Zone_EspeceMonstre {
 * <<PK>> <<FK>> id_Zone : INT
 <<PK>> <<FK>> id_EspeceMonstre : INT
}

entity "IndividuMonstre" as IndividuMonstre {
  * id : INT <<PK>>
  --
  nom : VARCHAR(255)
  niveau : INT
  attaque : INT
  defense : INT
  vitesse : INT
  attaqueSpe : INT
  defenseSpe : INT
  pvMax : INT
  potentiel : DOUBLE
  exp : DOUBLE
  pv : INT
  --
  espece_id : INT <<FK>>
  entraineur_equipe_id : INT <<FK>>
  entraineur_boite_id : INT <<FK>>
}

'--------------------------------------------------
' Relations
'--------------------------------------------------

Entraineur ||--o{ IndividuMonstre : "possède (équipe)"
Entraineur ||--o{ IndividuMonstre : "possède (boîte)"
EspeceMonstre ||--o{ IndividuMonstre : "appartient à"
Zone ||--o{ Zone_EspeceMonstre
EspeceMonstre ||--o{ Zone_EspeceMonstre
'TODO

@enduml
